# slicer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  slicer.cpp  slicer.h  slicer_bunny.txt  suMesh.cpp  suMesh.h
